# caka

./: .clang-format  .gitignore  Makefile  caka.opam  dune-project
lib/: ast.proto  dune
lib/codegen/: backend.c  backend.h  meson.build
lib/parser/: dune  errors.ml  lexer.ml  parser.mly  utils.ml
lib/parser/resolver/: resolver.ml  typeResolver.ml
test/: dune  mocks.ml  test_caka.ml
test/call/: call.ml
test/function/: function.ml  function_types.ml
test/operator/: operator_comparation.ml  operator_math.ml
test/types/: types_named.ml  types_struct.ml
test/variable/: variable.ml  variable_types.ml  variable_types_cast.ml  variable_types_compound.ml
